[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Objects/Circuit/KVLCicruit.png" type="Texture" id=2]
[ext_resource path="res://Resources/Puzzles/Chapter II/KCLKCL/KVLCircuit.gd" type="Script" id=3]

[node name="KVLCircuit" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Background" parent="." index="0"]
color = Color( 0.403922, 0.403922, 0.403922, 1 )

[node name="InstructionLabel" type="Label" parent="." index="2"]
margin_left = 8.08603
margin_top = 2.94037
margin_right = 209.086
margin_bottom = 33.9404
text = "Identify the correct path based 
on the KVL equations"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="3"]
margin_left = 225.673
margin_top = 158.045
margin_right = 315.673
margin_bottom = 172.045
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="." index="4"]
margin_left = 162.258
margin_top = 153.875
margin_right = 219.258
margin_bottom = 173.875
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="." index="5"]
position = Vector2( 79.3761, 106.905 )
scale = Vector2( 0.269143, 0.269143 )
texture = ExtResource( 2 )

[node name="PathD" type="Label" parent="." index="6"]
margin_left = 162.241
margin_top = 118.729
margin_right = 296.241
margin_bottom = 149.729
text = "Path D:
v6-v7-vd = 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D" type="OptionButton" parent="PathD" index="0"]
margin_left = -3.67548
margin_top = -0.336029
margin_right = 66.3245
margin_bottom = 19.664
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathC" type="Label" parent="." index="7"]
margin_left = 162.241
margin_top = 88.1389
margin_right = 296.241
margin_bottom = 119.139
text = "Path C:
vb+v4-v6-v5 = 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="OptionButton" parent="PathC" index="0"]
margin_left = -3.67548
margin_top = -0.221748
margin_right = 66.3245
margin_bottom = 19.7783
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathB" type="Label" parent="." index="8"]
margin_left = 162.241
margin_top = 58.2832
margin_right = 296.241
margin_bottom = 89.2832
text = "Path B:
-va+v3+v5 = 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="OptionButton" parent="PathB" index="0"]
margin_left = -3.67548
margin_top = -1.20115
margin_right = 66.3245
margin_bottom = 18.7989
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathA" type="Label" parent="." index="9"]
margin_left = 162.241
margin_top = 26.3313
margin_right = 296.241
margin_bottom = 57.3313
text = "Path A:
-v1+v2-v4-vb-v3  = 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A" type="OptionButton" parent="PathA" index="0"]
margin_left = -3.67548
margin_top = -1.09344
margin_right = 66.3245
margin_bottom = 18.9066
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
[connection signal="item_selected" from="PathD/D" to="." method="_on_D_item_selected"]
[connection signal="item_selected" from="PathC/C" to="." method="_on_C_item_selected"]
[connection signal="item_selected" from="PathB/B" to="." method="_on_B_item_selected"]
[connection signal="item_selected" from="PathA/A" to="." method="_on_A_item_selected"]
